--- a/references.bib
+++ b/references.bib
@@ -1,3 +1,83 @@
+@ARTICLE{Barkana:98,
+   author = {{Barkana}, R.},
+    title = "{Fast Calculation of a Family of Elliptical Mass Gravitational Lens Models}",
+  journal = {\apj},
+   eprint = {astro-ph/9802002},
+ keywords = {GALAXIES: STRUCTURE, COSMOLOGY: GRAVITATIONAL LENSING, Galaxies: Structure, Cosmology: Gravitational Lensing},
+     year = 1998,
+    month = aug,
+   volume = 502,
+    pages = {531-537},
+      doi = {10.1086/305950},
+   adsurl = {http://adsabs.harvard.edu/abs/1998ApJ...502..531B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Mao:12,
+   author = {{Mao}, S. and {Witt}, H.~J.},
+    title = "{Lensing by a singular isothermal sphere and a black hole}",
+  journal = {\mnras},
+archivePrefix = "arXiv",
+   eprint = {1111.2429},
+ primaryClass = "astro-ph.CO",
+ keywords = {black hole physics, gravitational lensing: strong, galaxies: elliptical and lenticular, cD, galaxies: structure},
+     year = 2012,
+    month = feb,
+   volume = 420,
+    pages = {792-799},
+      doi = {10.1111/j.1365-2966.2011.20089.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2012MNRAS.420..792M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{Rusin:05,
+   author = {{Rusin}, D. and {Keeton}, C.~R. and {Winn}, J.~N.},
+    title = "{Measuring Supermassive Black Holes in Distant Galaxies with Central Lensed Images}",
+  journal = {\apjl},
+   eprint = {astro-ph/0412034},
+ keywords = {Black Hole Physics, Galaxies: Nuclei, Cosmology: Gravitational Lensing},
+     year = 2005,
+    month = jul,
+   volume = 627,
+    pages = {L93-L96},
+      doi = {10.1086/432439},
+   adsurl = {http://adsabs.harvard.edu/abs/2005ApJ...627L..93R},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Bowman:04,
+   author = {{Bowman}, J.~D. and {Hewitt}, J.~N. and {Kiger}, J.~R.},
+    title = "{Gravitational Lensing Signatures of Supermassive Black Holes in Future Radio Surveys}",
+  journal = {\apj},
+   eprint = {astro-ph/0406568},
+ keywords = {Black Hole Physics, Galaxies: Evolution, Cosmology: Gravitational Lensing, Surveys, Telescopes},
+     year = 2004,
+    month = dec,
+   volume = 617,
+    pages = {81-101},
+      doi = {10.1086/425172},
+   adsurl = {http://adsabs.harvard.edu/abs/2004ApJ...617...81B},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{Mao:01,
+   author = {{Mao}, S. and {Witt}, H.~J. and {Koopmans}, L.~V.~E.},
+    title = "{The influence of central black holes on gravitational lenses}",
+  journal = {\mnras},
+   eprint = {astro-ph/0007011},
+ keywords = {GRAVITATIONAL LENSING, GALAXIES: NUCLEI, GALAXIES: STRUCTURE, COSMOLOGY: THEORY, DARK MATTER},
+     year = 2001,
+    month = may,
+   volume = 323,
+    pages = {301-307},
+      doi = {10.1046/j.1365-8711.2001.04143.x},
+   adsurl = {http://adsabs.harvard.edu/abs/2001MNRAS.323..301M},
+  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 @ARTICLE{Bennert:10,
    author = {{Bennert}, V.~N. and {Treu}, T. and {Woo}, J.-H. and {Malkan}, M.~A. and 
 	{Le Bris}, A. and {Auger}, M.~W. and {Gallagher}, S. and {Blandford}, R.~D.
